<resources>
    <!-- Standard text for the program -->
    <string name="app_name">Drink Register App</string>
    <string name="app_organization" translatable="false">Scouts Gits</string>
    <string name="confirm">Confirm</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="no_permission">You don\'t have permission to do this!</string>

    <!-- check_balance -->
    <string name="balance_title">Balance</string>

    <!-- confirm_changes -->
    <string name="changes_title">Changes</string>
    <string name="cancel">Cancel</string>

    <!-- create_user -->
    <string name="create_user_header">New user</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="pin_code">Pincode</string>
    <string name="group1">Kapoenen</string>
    <string name="group2">Welpen</string>
    <string name="group3">Jongverkenners</string>
    <string name="group4">Verkenners</string>
    <string name="group5">Jins</string>
    <string name="group6">Ex-leaders</string>
    <string name="group7">Other</string>
    <string name="empty_field">Please fill in this field!</string>
    <string name="name_uppercase">Please start the name with uppercase!</string>
    <string name="pincode_length">Enter a pincode between 2 and 6 characters!</string>
    <string name="invalid_number">Please enter a number!</string>
    <string name="user_exists">This user already exists!</string>

    <!-- edit_menu -->
    <string name="edit_menu_header">Edit Menu</string>
    <string name="edit_balance">Edit balance</string>
    <string name="change_balance">Amount</string>
    <string name="edit_pincode">Edit pincode</string>
    <string name="edit_group">Edit group</string>
    <string name="delete_user">Delete User</string>
    <string name="delete_user_text1">Are you sure you want to delete</string>
    <string name="delete_user_text2">\?</string>
    <string name="edit_rank">Edit rank</string>
    <string name="regular" translatable="false">regular</string>
    <string name="mod" translatable="false">mod</string>
    <string name="admin" translatable="false">admin</string>

    <!-- log -->
    <string name="addition">added to</string>
    <string name="creation">created user</string>
    <string name="deletion">deleted from</string>
    <string name="error">Something went wrong!</string>

    <!-- main_screen -->
    <string name="exit" translatable="false">exit</string>
    <string name="log" translatable="false">log</string>
    <string name="log_out">log out</string>

    <!-- pincode -->
    <string name="pincode_header">Enter pincode:</string>
    <string name="update_pincode">New pincode:</string>
    <string name="cor_button" translatable="false">COR</string>
    <string name="ok_button" translatable="false">OK</string>
    <string name="invalid_pincode">Incorrect pincode!</string>
    <string name="updated_notification">Pincode updated!</string>

    <!-- regular_options -->
    <string name="options_header">Options</string>
    <string name="check_balance">Check balance</string>
    <string name="change_pincode">Change pincode</string>
    <!-- mod_options -->
    <string name="create_user">Create User</string>
    <string name="edit_user">Edit User</string>
    <!-- admin_options -->
    <string name="admin_options_header">Admin options</string>
    <string name="get_balances">Get balances</string>
    <string name="total">Total</string>
    <string name="reset_balances">Reset balances</string>
    <string name="print_database">Print Database</string>
    <string name="empty_database">Empty Database</string>


</resources>