<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="400dp"
    android:layout_height="600dp"
    android:background="@color/grey">

    <TextView
        android:id="@+id/editGroupMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit_group"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmationButton"
        android:layout_width="210dp"
        android:layout_height="80dp"
        android:layout_marginBottom="30dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/groupSelect"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:checkedButton="@id/group7"
        android:isScrollContainer="true"
        android:showDividers="middle|beginning|end"
        app:layout_constraintBottom_toTopOf="@+id/confirmationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGroupMenuTitle">

        <RadioButton
            android:id="@+id/group1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/group1"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/group2"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/group3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/group3"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/group4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/group4"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/group5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/group5"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/group6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/group6"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/group7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/group7"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>