<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="500dp"
    android:layout_height="650dp"
    android:background="@color/grey">

    <TextView
        android:id="@+id/editMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit_menu_header"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editBalanceButton"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit_balance"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMenuTitle" />

    <Button
        android:id="@+id/editPincodeButton"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit_pincode"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBalanceButton" />

    <Button
        android:id="@+id/editGroupButton"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit_group"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPincodeButton" />

    <Button
        android:id="@+id/deleteUserButton"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/delete_user"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGroupButton" />


</androidx.constraintlayout.widget.ConstraintLayout>