<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="500dp"
    android:layout_height="650dp"
    android:background="@color/grey">

    <TextView
        android:id="@+id/optionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/options_header"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/checkBalanceButton"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/check_balance"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsTitle" />

    <Button
        android:id="@+id/changePincodeButton"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/change_pincode"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBalanceButton" />

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_user"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePincodeButton" />

    <Button
        android:id="@+id/editUserButton"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit_user"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUserButton" />


</androidx.constraintlayout.widget.ConstraintLayout>