<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="750dp"
    android:layout_height="650dp"
    android:background="@color/grey"
    tools:ignore="Autofill" >

    <TextView
        android:id="@+id/changesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/create_user_header"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmationButton"
        android:layout_width="210dp"
        android:layout_height="80dp"
        android:layout_marginBottom="30dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:ems="8"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/lastNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changesTitle" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:ems="8"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmationButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changesTitle" />

    <EditText
        android:id="@+id/pinCodeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:ems="8"
        android:hint="@string/pin_code"
        android:inputType="number"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmationButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameInput" />

    <RadioGroup
        android:id="@+id/groupSelect"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:background="@color/blue"
        android:checkedButton="@id/group7"
        android:isScrollContainer="true"
        android:showDividers="middle|beginning|end"
        app:layout_constraintBottom_toTopOf="@+id/confirmationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changesTitle">

        <RadioButton
            android:id="@+id/group1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/group1"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/group2"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/group3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/group3"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/group4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/group4"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/group5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/group5"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/group6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/group6"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/group7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/group7"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/firstNameError"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/firstNameInput"
        app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

    <TextView
        android:id="@+id/lastNameError"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/lastNameInput"
        app:layout_constraintTop_toBottomOf="@+id/lastNameInput" />

    <TextView
        android:id="@+id/pinCodeError"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/pinCodeInput"
        app:layout_constraintTop_toBottomOf="@+id/pinCodeInput" />

</androidx.constraintlayout.widget.ConstraintLayout>